# trading212bot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/market_data_service/: Dockerfile  pyproject.toml
backend/market_data_service/alembic/versions/: 0001_init.sql
backend/market_data_service/app/: main.py
backend/market_data_service/app/api/: routes.py
backend/market_data_service/app/domain/: models.py
backend/market_data_service/app/repositories/: in_memory_repo.py
backend/market_data_service/app/services/: market_data_service.py
backend/market_data_service/tests/: test_routes.py
backend/strategy_service/: Dockerfile  pyproject.toml
backend/strategy_service/alembic/versions/: 0001_init.sql
backend/strategy_service/app/: main.py
backend/strategy_service/app/api/: routes.py
backend/strategy_service/app/domain/: models.py
backend/strategy_service/app/services/: backtest_service.py  cash_and_dca_v1.py  defensive_quality_v1.py  momentum_breakout_v1.py  regime_detector.py  strategy_registry.py  trim_and_hedge_v1.py
backend/strategy_service/tests/: test_additional_strategies.py  test_regime_and_strategy.py
backend/trading_service/: Dockerfile  pyproject.toml
backend/trading_service/alembic/versions/: 0001_init.sql
backend/trading_service/app/: main.py
backend/trading_service/app/api/: routes.py
backend/trading_service/app/domain/: models.py
backend/trading_service/app/repositories/: in_memory_repo.py
backend/trading_service/app/services/: order_service.py
backend/trading_service/tests/: test_live_mode_guard.py  test_order_guards.py
config/: bot.json  bot.schema.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LIVE_READINESS.md  RUNBOOK.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/positions/: page.tsx
frontend/src/components/: app-sidebar.tsx  dashboard-shell.tsx  mode-toggle.tsx  query-provider.tsx  scaffold-page.tsx  theme-provider.tsx
frontend/src/hooks/: useDashboardData.ts
infra/: docker-compose.test.yml  docker-compose.yml
infra/postgres/: init.sql
libs/py_common/: pyproject.toml
libs/py_common/src/py_common/: __init__.py
libs/py_common/src/py_common/brokers/: __init__.py  alpaca.py  backtest.py  base.py  ibkr.py  mock.py  registry.py  trading212.py
libs/py_common/src/py_common/brokers/tests/: contract.py
libs/py_common/src/py_common/clients/: eodhd_client.py
libs/py_common/src/py_common/compliance/: __init__.py  aaoifi_inhouse.py  base.py  mock.py  musaffa.py  registry.py  zoya.py
libs/py_common/src/py_common/compliance/tests/: contract.py
libs/py_common/src/py_common/config/: loader.py
libs/py_common/src/py_common/decimal_utils/: math.py
libs/py_common/src/py_common/domain/: strategy.py
libs/py_common/src/py_common/errors/: __init__.py
libs/py_common/src/py_common/logging/: __init__.py  config.py  context.py  events.py  middleware.py  redaction.py
libs/py_common/tests/: test_decimal_utils.py
scripts/: dev.sh  logging_lint.sh  run_backtest.py  test.sh
(+16 files in other folders)
