[project]
name = "trading212bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "py-common",
  # Service runtime deps. Services themselves are not installable packages
  # because each ships an `app/` package and Python doesn't tolerate three
  # different `app/` packages living in the same site-packages.
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.0",
]

[tool.uv.workspace]
members = ["libs/py_common"]

[tool.uv.sources]
py-common = { workspace = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
pythonpath = ["libs/py_common/src"]
# NOTE: do not list testpaths here — each backend service has its own `app/`
# package, so they must be tested in separate pytest invocations. See `scripts/test.sh`.
