# Metadata-only descriptor — this service is NOT a uv workspace member.
# It cannot be, because all three backend services ship an `app/` top-level
# package. They run as entry points via `uvicorn --app-dir backend/<svc>`,
# not as installed Python distributions.
[project]
name = "market-data-service"
version = "0.1.0"
description = "Market data, instrument master, OHLCV, compliance lookup"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "py-common",
]
