# Metadata-only descriptor — this service is NOT a uv workspace member.
# See backend/market_data_service/pyproject.toml for why.
[project]
name = "strategy-service"
version = "0.1.0"
description = "Regime detection, strategies, backtests"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "py-common",
]
