[project]
name = "py-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.115",
  "jsonschema>=4.22"
]

[project.optional-dependencies]
test = ["pytest>=8.0", "hypothesis>=6.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
