[project]
name = "py-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.115",
  "jsonschema>=4.22",
  "httpx>=0.27"
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "hypothesis>=6.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
